Update spacing on race-meta (fixes #25)

--- a/racetime/static/racetime/style/base.css
+++ b/racetime/static/racetime/style/base.css
@@ -582,6 +582,7 @@ header > .current-race > a .timer {
 }
 .meta-user-list {
     font-size: 13px;
+    white-space: normal;
 }
 .meta-user-list .user-pop > .scrim {
     line-height: inherit;
